<resources>
    <string name="app_name">BeautyApp</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="explore_category">Explore Category</string>
    <string name="view_all">view all</string>
    <string name="explore_popular">Explore Popular</string>
    <string name="behrooz_rashidi">Behrooz Rashidi</string>
</resources>